--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.7",
+    "immer": "^9.0.15",
     "next": "12.2.3",
     "postcss": "^8.4.14",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.1.6",
     "zustand": "4.0.0-rc.4"
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "18.0.6",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
