--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.1.6",
+    "uuid": "^8.3.2",
     "zustand": "4.0.0-rc.4"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@types/react": "18.0.15",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "18.0.6",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "husky": "^8.0.1",
